<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/counterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/number"
            android:textSize="200sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/incrementButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/increment"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:strokeColor="@color/red" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/randomColorButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/random_color"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:strokeColor="@color/red" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/switchVisibilityButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/switch_visibility"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:strokeColor="@color/red" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>